# AlignReg

./: .gitignore  LICENSE  README.md  augment.py  config.py  examples.ipynb  regularization.py  setup.cfg  tf_training.py  tf_user_code.py  torch_training.py  torch_user_code.py
discard/: training.py
examples/: tf_example.py  torch_example.py
src/: augment.py  regularization.py  tf_training.py  torch_training.py
src/alignreg/: regularization.py  tf_training.py  torch_training.py
