[metadata]
name = example-package-YOUR-USERNAME-HERE#TODO
version = 1.0
author = Hanru Yan
author_email = hanru.yan99@gmail.com
description = An implementation of the algorithm presented in arXiv:2011.13052
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject#TODO
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
